force-app/main/default/objects/Sponsorship__c/Sponsorship__c.object-meta.xml
<CustomObject>
    <description>Tracks brand sponsorships with deliverables, impressions, and contract management for all sports including women's sports with 20% premium tracking</description>
    <label>Sponsorship</label>
    <nameField>
        <displayFormat>SPON-{0000}</displayFormat>
        <label>Sponsorship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>