force-app/main/default/objects/Sponsorship__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Lookup</type>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <description>Sponsored competition/league</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>