force-app/main/default/objects/Sponsorship__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <label>Contract End</label>
    <type>Date</type>
    <description>Sponsorship contract end date</description>
</CustomField>