force-app/main/default/objects/Sponsorship__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total value of sponsorship contract</description>
</CustomField>