force-app/main/default/objects/Sponsorship__c/fields/Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Deliverables__c</fullName>
    <label>Deliverables</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Sponsorship deliverables and obligations</description>
</CustomField>