force-app/main/default/objects/Sponsorship__c/fields/Impressions_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Delivered__c</fullName>
    <label>Impressions Delivered</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Actual number of brand impressions delivered</description>
</CustomField>