force-app/main/default/objects/Sponsorship__c/fields/Impressions_Target__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Target__c</fullName>
    <label>Impressions Target</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Target number of brand impressions/exposures</description>
</CustomField>