force-app/main/default/objects/Sponsorship__c/fields/Logo_Usage_Rights__c.field-meta.xml
<CustomField>
    <fullName>Logo_Usage_Rights__c</fullName>
    <label>Logo Usage Rights</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Sponsor has rights to use team/league logo</description>
</CustomField>