force-app/main/default/objects/Sponsorship__c/fields/Performance_Score__c.field-meta.xml
<CustomField>
    <fullName>Performance_Score__c</fullName>
    <label>Performance Score</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Impressions_Target__c &gt; 0, Impressions_Delivered__c / Impressions_Target__c, 0)</formula>
    <description>Performance score: Delivered/Target impressions</description>
</CustomField>