force-app/main/default/objects/Sponsorship__c/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <label>Sponsor Name</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <description>Brand/company providing the sponsorship</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>