force-app/main/default/objects/Sponsorship__c/fields/Sponsorship_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Type__c</fullName>
    <label>Sponsorship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title Sponsor</fullName>
            </value>
            <value>
                <fullName>Category Sponsor</fullName>
            </value>
            <value>
                <fullName>Event Sponsor</fullName>
            </value>
            <value>
                <fullName>Jersey Sponsor</fullName>
            </value>
            <value>
                <fullName>Stadium/Venue Sponsor</fullName>
            </value>
            <value>
                <fullName>Broadcast Sponsor</fullName>
            </value>
            <value>
                <fullName>Digital Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of sponsorship (Title, Category, Event, Jersey, etc.)</description>
</CustomField>