force-app/main/default/objects/Sponsorship__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Sponsorships</relationshipLabel>
    <relationshipName>Team_Sponsorships</relationshipName>
    <description>Sponsored team</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>