force-app/main/default/objects/Sponsorship__c/fields/Women_Premium__c.field-meta.xml
<CustomField>
    <fullName>Women_Premium__c</fullName>
    <label>Women's Premium</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>20% premium amount for women's sports sponsorships</description>
</CustomField>